--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 buildscript {
     ext {
         compose_version = '1.3.3'
+        kotlin_version = '1.8.0'
     }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
