--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,11 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha08'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -81,6 +81,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0"
     //  viewmodel scope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
+
+    //  Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //  splash screen api
+    implementation("androidx.core:core-splashscreen:1.0.0")
+
+    //  lottie
+    implementation 'com.airbnb.android:lottie-compose:5.0.3'
 
     //  intro showcase for app walkthrough
     implementation 'com.canopas.intro-showcase-view:introshowcaseview:1.0.7'
