--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
 
     //  coil
     implementation "io.coil-kt:coil-compose:2.2.2"
+
+    //  material icons
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
 }
